--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "my-app",
   "version": "0.1.0",
+  "type": "module",
   "private": true,
-  "homepage": "https://shivtcs1983.github.io/complex-management-system",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -13,15 +13,15 @@
     "react-router-dom": "7.2.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4",
+    "path":"^0.12.7",
     "sass":"^1.85.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+ "dev":"vite",
+ "build":"vite build",
+ "build-prod":"vite build",
+ "ci":"npm run build",
+  "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -42,7 +42,10 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^6.1.1"
+    "gh-pages": "^6.1.1",
+    "@vitejs/plugin-react":"^4.2.1",
+    "vite":"^5.4.6",
+    "vite-plugin-static-copy": "^1.0.1"
   },
   "rules":{
 "no-console":"off"
